Updated README .editorconfig and gradle/maven builds

--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,7 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
-dependencies {
-    
+dependencies {    
 }
 
 //Maven compatibility task:
@@ -35,6 +34,7 @@ task writePom << {
                 "maven.compiler.source" "1.6"
                 "maven.compiler.target" "1.6"
                 "checkstyle.config.location" "google_checks.xml"
+                "checkstyle.consoleOutput" "true"
             }
             licenses {
                 license {
