--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <module>java-ilp-core</module>
   </modules>
   <properties>
+    <checkstyle.consoleOutput>true</checkstyle.consoleOutput>
     <maven.compiler.source>1.6</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.target>1.6</maven.compiler.target>
