Added java-ilp-ledger-simple submodule to maven pom

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
   <modules>
     <module>java-crypto-conditions</module>
     <module>java-ilp-core</module>
+    <module>java-ilp-ledger-simple</module>
   </modules>
   <properties>
     <checkstyle.consoleOutput>true</checkstyle.consoleOutput>
