--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 #Travis CI (https://travis-ci.com)
 language: java
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/97828e17fd4adcb37306
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
